--- a/app/src/main/res/layout/content_photo.xml
+++ b/app/src/main/res/layout/content_photo.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,23 +10,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.notMyCode.OCRActivity$CameraActivity"
-    tools:showIn="@layout/activity_camera">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="100dp"
-        android:text="@string/Banner"
-        android:padding="60dp"/>
+    tools:context="com.example.littledannyha.split.PhotoActivity"
+    tools:showIn="@layout/activity_photo">
 
-    <Button
+    <ImageView
+        android:id="@+id/photo_activity_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="30dp"
-        android:text="Take a photo"/>
+        android:layout_height="wrap_content"/>
+    <!--<TextView-->
+        <!--android:gravity="center"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:text=""/>-->
 
-    
-
-</LinearLayout>
+</RelativeLayout>
