--- a/app/src/main/res/layout/content_camera.xml
+++ b/app/src/main/res/layout/content_camera.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="30dp"
-        android:onClick="dispatchTakePictureIntent"
+        android:onClick="captureImageFromCamera"
         android:text="Take a photo"/>
 
     
